add: chart feature, edit readme

--- a/account-details/src/shared/styles/_variables.scss
+++ b/account-details/src/shared/styles/_variables.scss
@@ -9,7 +9,13 @@
   --color-baby-blue: #F2F5F8;
 
   --color-green: #53B578;
+  --color-dark-green:#309557;
   --color-red: #E07C7C;
+
+  --color-chart-green: #1ddd9a;
+  --color-chart-red: #ed4747;
+  --color-chart-blue: #308cca;
+  --color-chart-orange: #ea993c;
 
   --font-family-base: 'Inter', sans-serif;
 
