--- a/account-details/src/shared/styles/main.scss
+++ b/account-details/src/shared/styles/main.scss
@@ -9,3 +9,5 @@
 @use 'blocks/base-button';
 @use 'blocks/table';
 @use 'blocks/pagination';
+@use 'blocks/expense-chart';
+@use 'blocks/expense-chart-popup';
